--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,27 +9,35 @@
 </head>
 
 <body>
+<div class="container">
+    <h1>Coronavirus Tracker</h1>
+    <p>This application lists the current number of cases reported across the globe</p>
 
-<h1>Coronavirus Tracker</h1>
-<p>This application lists the current number of cases reported across the globe</p>
+    <div class="jumbotron">
+        <h1 class="display-4" th:text="${totalReportedCases}"></h1>
+        <p class="lead">Total cases reported as of today</p>
+        <hr class="my-4">
+        <p>
+            <span>New cases reported since previous day:</span>
+            <span th:text="${totalNewCases}"></span>
+        </p>
+    </div>
 
-<div class="bg-light">
-    <h1 class="display-4" th:text="${totalReportedCases}"></h1>
-    <p class="lead">Total cases reported as of today</p>
+    <table class="table">
+        <tr>
+            <th>State</th>
+            <th>Country</th>
+            <th>Total Cases Reported</th>
+            <th>Changes since last day</th>
+        </tr>
+        <tr th:each="locationStat : ${locationStats}">
+            <td th:text="${locationStat.state}"></td>
+            <td th:text="${locationStat.country}"></td>
+            <td th:text="${locationStat.latestTotalCases}">0</td>
+            <td th:text="${locationStat.diffFromPreviousDay}">0</td>
+        </tr>
+    </table>
 </div>
-
-<table>
-    <tr>
-        <th>State</th>
-        <th>Country</th>
-        <th>Total Cases Reported</th>
-    </tr>
-    <tr th:each="locationStat : ${locationStats}">
-        <td th:text="${locationStat.state}"></td>
-        <td th:text="${locationStat.country}"></td>
-        <td th:text="${locationStat.latestTotalCases}">0</td>
-    </tr>
-</table>
 
 </body>
 
